--- a/Signal/translations/hi.lproj/Localizable.strings
+++ b/Signal/translations/hi.lproj/Localizable.strings
@@ -2909,7 +2909,7 @@
 "GROUP_CREATED_BY_LOCAL_USER" = "यह ग्रुप आपने बनाया है।";
 
 /* Message indicating that group was created by another user. Embeds {{remote user name}}. */
-"GROUP_CREATED_BY_REMOTE_USER_FORMAT" = "%1$@ created the group.";
+"GROUP_CREATED_BY_REMOTE_USER_FORMAT" = "%1$@ ने ग्रुप बनाया।";
 
 /* Message indicating that group was created by an unknown user. */
 "GROUP_CREATED_BY_UNKNOWN_USER" = "ग्रुप बन गया है।";
