--- a/fastlane/metadata/fr-FR/release_notes.txt
+++ b/fastlane/metadata/fr-FR/release_notes.txt
@@ -1,1 +1,1 @@
-• Désormais, lorsque vous ouvrez une conversation affichant un appel manqué, l’indicateur d’appel manqué disparaît aussi de l’onglet Appels. Si vous n’aviez jamais remarqué ce bug, vous n’avez rien manqué.
+• We added support for custom nicknames and notes for anyone you're chatting with on Signal, even if they aren't in your system contacts. Whether you're adding the missing letters in a lazy friend's profile name, or a reminder about where you met, notes and nicknames provide a convenient and secure way to jot down additional details about your Signal Connections — and they're end-to-end encrypted and protected by your Signal PIN so they can be securely restored if you lose your phone too.
