--- a/fastlane/metadata/hi/release_notes.txt
+++ b/fastlane/metadata/hi/release_notes.txt
@@ -1,1 +1,1 @@
-• अब जब आप मिस्ड कॉल वाली चैट खोलेंगे तो कॉल टैब से वह मिस्ड कॉल इंडिकेटर भी क्लियर हो जाएगा। यदि आपने यह बग कभी नहीं देखा है, तो आप बहुत कुछ नहीं खो रहे हैं।
+• We added support for custom nicknames and notes for anyone you're chatting with on Signal, even if they aren't in your system contacts. Whether you're adding the missing letters in a lazy friend's profile name, or a reminder about where you met, notes and nicknames provide a convenient and secure way to jot down additional details about your Signal Connections — and they're end-to-end encrypted and protected by your Signal PIN so they can be securely restored if you lose your phone too.
