--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,1 +1,1 @@
-• Als je een chat met een gemiste oproep opent, wordt de indicator voor gemiste oproepen nu ook direct gewist van het tabblad Oproepen. Heb je deze bug nog nooit gezien, dan heb je niet veel gemist.
+• We added support for custom nicknames and notes for anyone you're chatting with on Signal, even if they aren't in your system contacts. Whether you're adding the missing letters in a lazy friend's profile name, or a reminder about where you met, notes and nicknames provide a convenient and secure way to jot down additional details about your Signal Connections — and they're end-to-end encrypted and protected by your Signal PIN so they can be securely restored if you lose your phone too.
